css/style.css
@import'utilities.css';
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
body {
    font-family: 'poppins', sans-serif;
    padding:0px;
    margin:0px;
    overflow-x:hidden;
}
html{
    scroll-behavior: smooth;
}

@media (max-width: 576px)
section .project-heading {
    /* margin-top: 4rem; */
    /* margin-left: 0px; */
    margin: 4rem 0;
    margin-bottom: 2rem;
}
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    -webkit-font-smoothing: antialiased;
}


header {
    background: black;
    height: 750px;
     /* width: 1340px;  */
    clip-path: polygon(0 0, 100% 0, 100% 100%, 30% 85%, 0 100%);
}

.container {
    max-width: 1152px;
    padding: 0 15px;
    margin: 0 auto;
}




header nav .left a {
    color: var(--pure);
    text-decoration: none;
    color: white;
    margin-right: 2rem;
    text-transform: uppercase;
    transition: all .3s ease;
}

header nav {
    padding: 1rem;
}

header nav .branding {
    margin-right: 3rem;
}

header nav .left a:hover {
    color: #e23c1d;
}

.branding {
    width: 300px;
    height: 70px;
    padding: 0px;
    margin: 0px;
}

.hero .right img {
    width: 400px;
    margin: 10px;
}

.hero .left {
    color: white;
    font-family: 'poppins' sans-serif;
}

.max-width {
    max-width: 1300px;
    padding: 0 80px;
    margin: auto;
}

.home {
    min-height: 500px;
    top: 50;
    color: #fff;
}

.home .max-width {
    margin: auto 0 auto 50px;
}

.home .right {
    float: right;
}

.home .home-content .text-1 {
    /* font-size: 27px; */
}

.home .home-content .text-2 {
    /* font-size: 55px; */
    font-weight: 600;
    margin-left: -3px;
}

.home .home-content .text-3 {
    /* font-size: 35px; */
    margin: 5px 0;
}

.home .home-content .text-3 span {
    color: #e23c1d;
    font-weight: 500;
}

.home .right img {
    /* width: 465px;
    height: 530px; */
    margin-left: 40%;
    /* margin-top: -16%; */
}

.home-content {
    margin-left: 9rem;
}

section {
    padding: 6rem;
}

.about .container .me {
    margin-left: 30rem;
    margin-top: -26rem;
}

section.about .aboutmeimg {
    height: 450px;
}

section.about h1 {
    margin-bottom: 1rem;
    font-size: 1.6rem;
    font-weight: 500;
}

section.about h1 span {
    color: #e23c1d;
}

section.about h3 {
    font-size: 1rem;
    margin-bottom: 1rem;
    /* font-weight: 450; */
}

section.about p {
    font-family: 'lato', sans-serif;
    color: rgb(99, 96, 96);
    line-height: 1.9;
    text-align: justify;
}

section.about .social {
    display: flex;
}

section.about .me .social a {
    margin-right: 0.6rem;
    margin-top: 0.5rem;
    border-radius: 50%;
}

.section-heading {
    color: black;
    text-align: center;
    margin-bottom: 1rem;
    line-height: 0.5;
    margin-top: 0rem;
    margin-left: -45px;
    font-weight: 500;
}

.section-heading span {
    color: #e23c1d;
}

.section-heading+p {
    color: rgb(99, 96, 96);
    font-family: 'lato', sans-serif;
    margin-bottom: 7rem;
    text-align: center;
    
}

section.services {
    background: rgb(238, 235, 231);
    margin-top: 150px;
}

section.services .card-box {
    display: grid;
    /* grid-template-columns: repeat(3, 1fr); */
    grid-column-gap: 2rem;
    grid-row-gap: 6rem;
}

section.services .card-box .card {
    background: #fff;
    padding: 2.6rem 2rem;
    position: relative;
    padding-top: 4rem;
    text-align: center;
    transition: all .3s ease;
    box-shadow: 5px 15px 15px #888888;
}

section.services .card-box .card img {
    position: absolute;
    top: -3.5rem;
    left: 50%;
    transform: translateX(-50%);
    width: 135px;
    height: 90px;
}

section.services .card-box .card h2 {
    font-weight: 350;
    font-size: 1.2rem;
    margin-bottom: 0.5rem;
}

section.services .card-box .card p {
    font-family: 'lato', sans-serif;
    color: rgb(99, 96, 96);
    line-height: 1.6;
}

section.services .card-box .card:hover {
    background: black;
}

section.services .card-box .card:hover h2 {
    color: white;
}

section.services .card-box .card:hover p {
    color: whitesmoke;
}

section .wrapper {
    /* height: 100vh; */
    color: #fff;
    font-family: 'poppins', sans-serif;
    /* width: 1170px; */
    margin: 0 auto;
    font-size: 14px;
    line-height: 28px;
    padding: 0px 0 130px;
}

section .skill-area {
    background: #262626;
}

section .wrapper img {
     width: 40%; 
}

section .wrapper .img-area {
     width: 100%; 
     float: left;
}

/* section .wrapper .skill-area {
    width: 55%;
    position: ;
    float: right;
    height: 50%;
    margin-top: -280px;
} */

section .wrapper .skill-area .Box {
    list-style: none;
    margin: 0;
    padding: 0;
}

section .wrapper .skill-area .Box li {
    margin-bottom: 37px;
    height: 35px;
    margin-left: 20px;
    margin-top: 15px;
}

section .wrapper .skill-area .Box li b {
    position: relative;
    font-size: 17px;
}

section .wrapper .skill-area .Box li .line {
    height: 5px;
    margin: 2px 0;
    background: #e23c1d;
    position: absolute;
    margin-top: 35px;
}

section .wrapper .skill-area .Box li .box1 {
    width: 40%;
    animation: box1 2s ease-out;
}

section .wrapper .skill-area .Box li .box2 {
    width: 35%;
    animation: box2 2s ease-out;
}

section .wrapper .skill-area .Box li .box3 {
    width: 27%;
    animation: box3 2s ease-out;
}

section .wrapper .skill-area .Box li .box4 {
    width: 31%;
    animation: box4 2s ease-out;
}
@keyframes box1{
    0%{
        width: 0;
    }
    100%{
        width: 40%;
    }
}
@keyframes box2{
    0%{
        width: 0;
    }
    100%{
        width: 35%;
    }
}
@keyframes box3{
    0%{
        width: 0;
    }
    100%{
        width: 27%;
    }
}
@keyframes box4{
    0%{
        width: 0;
    }
    100%{
        width: 31%;
    }
}
/* ... */

